# celex_livox_calibration

./: CMakeLists.txt  CmakeLists.txt  ExtriCal.cpp  ExtriCal.h  Param.cpp  Param.h  README.md  common_PCL.h  common_pcl.h  main.cpp
data/lidar/: 0.ply  0.txt  1.ply  1.txt  2.ply  2.txt  3.ply  3.txt  4.ply  4.txt  5.ply  5.txt  6.ply  6.txt  7.ply  7.txt  8.ply  8.txt  9.ply  9.txt
param/: config.yml
